--- a/index.html
+++ b/index.html
@@ -1,180 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flight Booking</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <!-- Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>working</title>
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+        <!-- Stylesheet -->
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
-    <!--Header and Menu Section-->
-    <header class="container">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a class="active" href="#">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
+    <body>
+        <!--Header and Menu Section-->
+        <header class="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a class="active" href="#">Sign Up</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <!--Booking Section-->
-    <main class="main-content container">
-        <div class="booking-form">
-            <h3>Booking Flights</h3>
-            <div class="input-group">
-                <label for="">Flying From</label>
-                <input class="inp-style" type="text" name="" placeholder="Dhake, Bangladesh">
-            </div>
-            <div class="input-group">
-                <label for="">Flying To</label>
-                <input class="inp-style" type="text" name="" placeholder="New York, United States">
-            </div>
-            <div class="inputs">
+        <!--Booking Section-->
+        <main class="main-content container">
+            <div class="booking-form">
+                <h3>Booking Flights</h3>
                 <div class="input-group">
-                    <label" for="">Departure</label>
-                        <input class="inp-style" type="date" name="">
+                    <label for="">Flying From</label>
+                    <input class="inp-style" type="text" name="" placeholder="Dhake, Bangladesh">
                 </div>
                 <div class="input-group">
-                    <label for="">Return</label>
-                    <input class="inp-style" type="date" name="">
+                    <label for="">Flying To</label>
+                    <input class="inp-style" type="text" name="" placeholder="New York, United States">
                 </div>
+                <div class="inputs">
+                    <div class="input-group">
+                        <label " for=" ">Departure</label>
+                        <input class="inp-style" type="date " name=" ">
+                    </div>
+                    <div class="input-group ">
+                        <label for=" ">Return</label>
+                        <input class="inp-style " type="date " name=" ">
+                    </div>
+                </div>
+                <div class="input-group f-class ">
+                    <div>
+                        <label for=" ">First Class ($150)</label>
+                        <input id="phone-count" class="inp-style inp-width" value="0" type="number " name=" " style="font-size: 18px; font-weight: bold;">
+                    </div>
+                    <div class="plus-minus-btn ">
+                        <button onclick="handleProductChange('phone', true)" class="btn btn-default plus-minus-btn "><i
+                            class="fas fa-plus"></i></button>
+                        <button onclick="handleProductChange('phone', false)" class="btn btn-default plus-minus-btn "><i
+                            class="fas fa-minus"></i></button>
+                    </div>
+                    <h5 id="phone-total" style="display: none;">$0</h5>
+                </div>
+                <div class="input-group f-class ">
+                    <div>
+                        <label for=" ">Economy ($100)</label>
+                        <input id="case-count" class="inp-style inp-width" value="0" type="number " name=" " style="font-size: 18px; font-weight: bold;">                    
+                    </div>
+                    <div class="plus-minus-btn">
+                        <button onclick="handleProductChange('case', true)" class="btn btn-default plus-minus-btn "><i
+                            class="fas fa-plus "></i></button>
+                        <button onclick="handleProductChange('case', false)" id="phone-decrease" class="btn btn-default plus-minus-btn "><i
+                            class="fas fa-minus "></i></button>
+                    </div>
+                    <h5 id="case-total" style="display: none;">$0</h5>
+                </div>
+                <div class="calculations ">
+                    <div class="amount ">
+                        <div class="left ">
+                            <p>Subtotal</p>
+                        </div>
+                        <div class="right ">
+                            <p id="subtotal-price">$0</p>
+                        </div>
+                    </div>
+
+                    <div class="amount ">
+                        <div class="left ">
+                            <p>Charge 10% VAT</p>
+                        </div>
+                        <div class="right ">
+                            <p id="total-vat">$0</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="amount ">
+                        <div class="left ">
+                            <h4>Total</h4>
+                        </div>
+                        <div class="right ">
+                            <p id="grand-total">$0</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn-style ">Book Now</button>
             </div>
-            <div class="input-group f-class">
-                <!-- <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
-                </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
-                </div> -->
-                <!-- 1st -->
-                <div>
-                    <label for="">First Class ($150)</label>
-                    <input id="phone-count" type="text" value="1" class="inp-style inp-width">
-                </div>
-                <div class="plus-minus-btn">
-                    <button onclick="handleProductChange('phone', true)" class="btn btn-default plus-minus-btn"><i
-                        class="fas fa-plus"></i></button>
-                <!-- <input id="phone-count" type="text" class="form-control text-center" value="1"> -->
-                    <button onclick="handleProductChange('phone', false)" class="btn btn-default plus-minus-btn"><i
-                        class="fas fa-minus"></i></button>
-                </div>
-                
+
+            <div class="booking-content ">
+                <h1>discover <br> around the world</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise voluptatibus quam</p>
             </div>
-
-            <div class="input-group f-class">
-                <!-- <div>
-                    <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width">
-                </div>
-                <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
-                </div> -->
-
-                <div>
-                    <label for="">First Class ($100)</label>
-                    <input id="case-count" type="text" value="1" class="inp-style inp-width">
-                </div>
-                <div class="plus-minus-btn">
-                    <button onclick="handleProductChange('case', true)" class="btn btn-default plus-minus-btn"><i
-                        class="fas fa-plus"></i></button>
-                <!-- <input id="phone-count" type="text" class="form-control text-center" value="1"> -->
-                    <button onclick="handleProductChange('case', false)" class="btn btn-default plus-minus-btn"><i
-                        class="fas fa-minus"></i></button>
-                </div>
-
-            </div>
-            <div class="calculations">
-                <div class="amount">
-                    <div class="left">
-                        <p>Subtotal</p>
-                    </div>
-                    <div class="right">
-                        <p id="total-price">$500</p>
-                    </div>
-                </div>
-
-                <div class="amount">
-                    <div class="left">
-                        <p>Charge 10% VAT</p>
-                    </div>
-                    <div class="right">
-                        <p id="tax-amount">$50</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="amount">
-                    <div class="left">
-                        <h4>Total</h4>
-                    </div>
-                    <div class="right">
-                        <p id="grand-total">$550</p>
-                    </div>
-                </div>
-            </div>
-            <button class="btn-style">Book Now</button>
-        </div>
-
-        <div class="booking-content">
-            <h1>discover <br> around the world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
-                veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
-                voluptatibus quam</p>
-        </div>
         </section>
 
-        <!--Thank You-->
-
+        
+        <!-- Script Here Start -->
         <script>
             function handleProductChange(product, isIncrease) {
-                const productinput = document.getElementById(product + '-count');
-                const productCount = parseFloat(productinput.value);
+                const productInput = document.getElementById(product + '-count');
+                const productCount = parseInt(productInput.value);
                 let productNewCount = productCount;
-                if (isIncrease == true) {
+                if(isIncrease == true) {
                     productNewCount = productCount + 1;
                 }
-                if (isIncrease == false && productCount > 0) {
+                if(isIncrease == false && productCount > 0) {
                     productNewCount = productCount - 1;
                 }
-                productinput.value = productNewCount;
+                productInput.value = productNewCount;
                 let productTotal = 0;
-                if (product == 'phone') {
+                if (product == 'phone'){
                     productTotal = productNewCount * 150;
                 }
-                if (product == 'case') {
+                if (product == 'case'){
                     productTotal = productNewCount * 100;
                 }
-                document.getElementById(product + '-total').innerHTML = "$" + productTotal;
+                document.getElementById(product + '-total').innerText = '$' + productTotal;
                 calculateTotal();
             }
-
             function calculateTotal() {
-                const phoneInput = document.getElementById('total-price');
+                const phoneInput = document.getElementById('phone-count');
                 const phoneCount = parseInt(phoneInput.value);
 
                 const caseInput = document.getElementById('case-count');
                 const caseCount = parseInt(caseInput.value);
 
-                const totalPrice = phoneCount * 150 + caseCount * 100;
-                document.getElementById('total-price').innerText = '$' + totalPrice;
+                const subTotalPrice = phoneCount * 150 + caseCount * 100;
+                document.getElementById('subtotal-price').innerText = '$' + subTotalPrice;
 
-                const tax = Math.round(totalPrice * 0.1);
-                document.getElementById('tax-amount').innerText = '$' + tax;
+                const totalVat = subTotalPrice * 0.1;
+                document.getElementById('total-vat').innerText = '$' + totalVat;
 
-                const grandTotal = totalPrice + tax;
+                const grandTotal = subTotalPrice + totalVat;
                 document.getElementById('grand-total').innerText = '$' + grandTotal;
             }
         </script>
-</body>
-
+    </body>
 </html>
