--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                         <input id="phone-count" class="inp-style inp-width" value="0" type="number " name=" " style="font-size: 18px; font-weight: bold;">
                     </div>
                     <div class="plus-minus-btn ">
-                        <button onclick="handleProductChange('phone', true)" class="btn btn-default plus-minus-btn "><i
-                            class="fas fa-plus"></i></button>
                         <button onclick="handleProductChange('phone', false)" class="btn btn-default plus-minus-btn "><i
                             class="fas fa-minus"></i></button>
+                        <button onclick="handleProductChange('phone', true)" class="btn btn-default plus-minus-btn "><i
+                            class="fas fa-plus"></i></button>
                     </div>
                     <h5 id="phone-total" style="display: none;">$0</h5>
                 </div>
@@ -67,10 +67,10 @@
                         <input id="case-count" class="inp-style inp-width" value="0" type="number " name=" " style="font-size: 18px; font-weight: bold;">                    
                     </div>
                     <div class="plus-minus-btn">
-                        <button onclick="handleProductChange('case', true)" class="btn btn-default plus-minus-btn "><i
-                            class="fas fa-plus "></i></button>
-                        <button onclick="handleProductChange('case', false)" id="phone-decrease" class="btn btn-default plus-minus-btn "><i
+                        <button onclick="handleProductChange('case', false)" class="btn btn-default plus-minus-btn "><i
                             class="fas fa-minus "></i></button>
+                        <button onclick="handleProductChange('case', true)" id="phone-decrease" class="btn btn-default plus-minus-btn "><i
+                            class="fas fa-plus"></i></button>
                     </div>
                     <h5 id="case-total" style="display: none;">$0</h5>
                 </div>
